--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-@@include('components/_head.html')
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="css/style.min.css">
+  <title>Document</title>
+</head>
 
 <body>
-  @@include('components/_header.html')
-  <!-- WRITE CODE HERE -->
+  <div class="wrapper">
+    <div class="content">
+      <header class="header">
+        <div class="header__top">
+          <div class="container">
+            <div class="header__inner">
+              <a class="header__logo" href="#">
+                <img src="images/content/logo.png" alt="">
+              </a>             
+              <div class="header__text">
+                Newark
+                New Jersey
+                USA
+              </div>              
+                <ul class="header__link">
+                  <li><a href="#">Services</a></li>
+                  <li><a href="#">Promotionf</a></li>
+                  <li><a href="#">FAQs</a></li>
+                  <li><a href="#">Reviews</a></li>
+                  <li><a href="#">About us</a></li>
+                </ul>             
+              <a class="header__phone" href="tel:3337773333">(333) 777-3333</a>
+            </div>
+          </div>
+        </div>
+      </header>
+    </div>
+    <footer>
 
-
-  <!-- STOP WRITE CODE -->
-  @@include('components/_footer.html')
-  @@include('components/_scripts.html')
+    </footer>
+  </div>
+  <script src="js/libs.min.js"></script>
+  <script src="js/main.min.js"></script>
 </body>
 
 </html>
